kustomize/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - name: eg-internal
      namespace: envoy-gateway-system
  hostnames:
    - jellyfin.tools.kilchhofer.info
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 8096
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
