kustomize/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/revision-history-limit: "1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: 120
spec:
  ingressClassName: nginx-internal
  rules:
  - host: jellyfin.tools.kilchhofer.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              name: http
  tls:
  - hosts:
    - jellyfin.tools.kilchhofer.info
    secretName: jellyfin-ingress-cert
