kustomize/jellyfin/networkpolicy-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  egress:
    - toFQDNs:
        - matchName: repo.jellyfin.org
        - matchName: api.themoviedb.org
        - matchName: fra1.mirror.jellyfin.org
        - matchName: www.omdbapi.com
        - matchName: image.tmdb.org
        - matchName: m.media-amazon.com
        - matchName: musicbrainz.org
        - matchPattern: "*.theaudiodb.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
